# rust-minikube-kubedb-postgres

./: history  pgadmin.yaml  postgres-tinker.yaml
argo/: .history.swp  history
argo/postgres-conf/: pgadmin.yaml  postgres.yaml
argo/tiller-conf/: configmap.role-tiller.ram9-system.yaml  full-access.role-tiller.ram9-dev.yaml  rolebinding-tiller.ram9-system.to.ram9-dev.yaml  rolebinding-tiller.ram9-system.to.ram9-system.yaml
ledger/: .env  Cargo.toml  Dockerfile  README.txt
ledger/migrations/2018-05-14-041730_create_ledger_entries/: down.sql  up.sql
ledger/src/: lib.rs  models.rs  schema.rs
